--- a/Assets/style.css
+++ b/Assets/style.css
@@ -26,7 +26,6 @@ h2 {
     width: 100vw;
     height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     max-width: 80rem;
@@ -64,13 +63,13 @@ h2 {
     text-align: center;
     margin-bottom: 1rem;
     text-decoration: none;
-    color: black;
+    color: white;
     background: purple;
     border-radius: 4px;
 }
 
 .btn:hover{
     cursor: pointer;
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 
