--- a/Assets/game.css
+++ b/Assets/game.css
@@ -32,7 +32,7 @@ body {
     background: green
 }
 
-.correct {
+.incorrect {
     background: red
 }
 
@@ -50,21 +50,6 @@ body {
 
 .hud-main-text {
     text-align: center;
-}
-
-#progressBar {
-    width: 20rem;
-    height: 3rem;
-    border: 0.2rem solid black;  
-    margin-top: 2rem;
-    border-radius: 50px;
-    overflow: hidden;
-}
-
-#progressBarFull {
-    height: 100%;
-    background: black;
-    width: 0%
 }
 
 
